[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/actor/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://assets/light.png" type="Texture" id=3]
[ext_resource path="res://assets/NotoSansTC-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/onryou.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.672, 16.7859 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.4452, 16.1901 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.152941, 0.145098, 0.145098, 0.501961 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75
corner_detail = 20
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.188235, 0.188235, 0.188235, 0.501961 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_blend = true
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75
corner_detail = 20
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.12549, 0.121569, 0.121569, 0.764706 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75
corner_detail = 20
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.113725, 0.113725, 0.113725, 0.588235 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.00392157, 0.00392157, 0.784314 )

[sub_resource type="DynamicFont" id=8]
size = 38
extra_spacing_top = -10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 32
extra_spacing_top = -15
extra_spacing_char = 2
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0196078, 0.0823529, 0.145098, 0.74902 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0, 0, 0.517647 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=13]
size = 48
outline_size = 1
outline_color = Color( 0.352941, 0, 0, 1 )
extra_spacing_char = 15
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=14]
size = 38
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 5
font_data = ExtResource( 4 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 10
script = ExtResource( 1 )

[node name="Player" type="Sprite" parent="."]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.968627, 0.968627, 0.968627, 1 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.133333, 0.0235294, 0.0235294, 1 )
position = Vector2( -0.0701542, 4.31508 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 720
smoothing_enabled = true
smoothing_speed = 10.0
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="DragBtn" type="Button" parent="Camera2D/CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -210.0
margin_right = 75.0
margin_bottom = -60.0
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
keep_pressed_outside = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPGUI" type="Panel" parent="Camera2D/CanvasLayer"]
margin_left = 35.0
margin_right = 192.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 56.8615, 10.5 )
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HP1" type="Panel" parent="Camera2D/CanvasLayer/HPGUI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -17.0
margin_right = 51.0
margin_bottom = 17.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HP2" type="Panel" parent="Camera2D/CanvasLayer/HPGUI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 56.0
margin_top = -17.0
margin_right = 101.0
margin_bottom = 17.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HP3" type="Panel" parent="Camera2D/CanvasLayer/HPGUI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 106.0
margin_top = -17.4702
margin_right = 151.0
margin_bottom = 16.5298
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ScoreMenu" type="VBoxContainer" parent="Camera2D/CanvasLayer"]
anchor_right = 1.0
margin_bottom = 83.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Camera2D/CanvasLayer/ScoreMenu"]
margin_right = 720.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "分數"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/ScoreMenu"]
margin_top = 50.0
margin_right = 720.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="Panel" parent="Camera2D/CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -81.0
margin_right = -27.0
margin_bottom = 55.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pausebar1" type="Panel" parent="Camera2D/CanvasLayer/pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -26.0
margin_right = -6.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( -247.443, 26 )
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="pausebar2" type="Panel" parent="Camera2D/CanvasLayer/pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 5.5
margin_top = -26.0
margin_right = 15.5
margin_bottom = 26.0
rect_pivot_offset = Vector2( -247.443, 26 )
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Camera2D/CanvasLayer/pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.0
margin_bottom = 10.0
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="PauseMenu" type="Panel" parent="Camera2D/CanvasLayer"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.5
margin_top = -125.5
margin_right = 222.5
margin_bottom = 125.5
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/PauseMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -118.5
margin_top = 28.0
margin_right = 118.5
margin_bottom = 77.0
custom_fonts/font = SubResource( 13 )
text = "遊戲暫停"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="Camera2D/CanvasLayer/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.5
margin_top = -11.0
margin_right = 161.5
margin_bottom = 65.0
custom_fonts/font = SubResource( 14 )
text = "繼續遊戲"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.293151, 0.0918754 )
scale = Vector2( 0.0546247, 0.0533234 )
texture = ExtResource( 3 )
color = Color( 1, 0.937255, 0, 1 )
energy = 1.5
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="Camera2D/CanvasLayer/pause/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/PauseMenu/continue" to="." method="_on_continue_pressed"]
